--- a/static/css/cvccommander.css
+++ b/static/css/cvccommander.css
@@ -2,15 +2,20 @@
 	position: relative;
 }
 
-#cvcuploaddz {
-	margin: 4px;
-	border: 3px dashed #ccc;
-	width: 100%;
-	height: 300px;
+.tab-content {
+	height: 80%;
 }
 
-.cvcdzinstructions {
-	font: bold 14px Arial,Helvetica,sans-serif;
-	color: #ccc;
+.tab-pane {
+	height: 100%;
+	width: 100%;
+	margin-top: .5em;
+}
+
+#cvcupload {
+	text-align:center;
+	font-size: 200%;
+	border: 2px dashed #aaa;
+	padding-top: 20%;
 }
 
