improve upload. Auto select uploaded item when upload completes. Other fixes

--- a/static/css/cvccommander.css
+++ b/static/css/cvccommander.css
@@ -95,3 +95,16 @@ a.btn {
 .cvc-modal-body {
 	overflow: auto;
 }
+
+.cvc-vertical-sep {
+	font-size: large;
+	color: black;
+}
+
+.cvc-file {
+	cursor: pointer;
+}
+
+.cvc-selected {
+	background-color: #ddd;
+}
